--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "gsap": "^3.12.2",
     "node-sass": "^7.0.3",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
